[gd_scene load_steps=8 format=3 uid="uid://bk8wv2ips48da"]

[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_4b80b"]
[ext_resource type="Texture2D" uid="uid://nfssp3fn2eah" path="res://Art/YarnMat.png" id="1_lte67"]
[ext_resource type="AudioStream" uid="uid://bk4ss4eyphyup" path="res://Music/happy_theme.ogg" id="2_jpfic"]
[ext_resource type="Texture2D" uid="uid://dowxirh6q82mb" path="res://Art/Overlay.png" id="4_60ae5"]
[ext_resource type="Texture2D" uid="uid://6t4q4hflihu5" path="res://Art/CatPaw.png" id="5_p8fpf"]

[sub_resource type="LabelSettings" id="LabelSettings_a3b7n"]
font_size = 50
font_color = Color(0, 0, 0.592157, 1)

[sub_resource type="Theme" id="Theme_d28dj"]
default_font_size = 30

[node name="World" type="Node2D"]
script = ExtResource("1_4b80b")
interval = 8.0

[node name="Enviroment" type="Node" parent="."]

[node name="Basket" type="Sprite2D" parent="Enviroment"]
z_index = -3
texture = ExtResource("1_lte67")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Enviroment"]
stream = ExtResource("2_jpfic")
autoplay = true

[node name="AudioListener2D" type="AudioListener2D" parent="Enviroment"]
current = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Score" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -472.0
offset_top = -292.0
offset_right = -343.0
offset_bottom = -233.0
grow_horizontal = 2
grow_vertical = 2

[node name="YouLost" type="ColorRect" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -460.0
offset_top = -280.0
offset_right = 460.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.423529, 0.745098, 0.941176, 1)

[node name="TextureRect" type="TextureRect" parent="UI/YouLost"]
modulate = Color(0.431373, 0.290196, 0.980392, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_60ae5")

[node name="Score2" type="Label" parent="UI/YouLost"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -176.0
offset_right = 279.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
text = "Your Score Was 10
Best Score: 1"
label_settings = SubResource("LabelSettings_a3b7n")
horizontal_alignment = 1

[node name="Button" type="Button" parent="UI/YouLost"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -4.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_d28dj")
theme_override_colors/font_color = Color(0.780392, 0.847059, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
text = "Restart"

[node name="Hand" type="Node2D" parent="."]
position = Vector2(-16, -416)

[node name="CatPaw" type="Sprite2D" parent="Hand"]
z_index = -1
position = Vector2(-48, -128)
scale = Vector2(0.841167, 1.02929)
texture = ExtResource("5_p8fpf")

[connection signal="button_down" from="UI/YouLost/Button" to="." method="_restart_button_pressed"]
